# mcp-trino-python

./: .gitignore  README.md  mcp_server.py  pyproject.toml  setup.sh
app/config/: settings.py
app/models/: __init__.py  query.py
app/services/: __init__.py  connection_pool.py  presto_service.py
npm-package/: package.json
