[project]
name = "mcp-trino-python"
version = "0.1.0"
description = "MCP Trino Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "pandas>=2.0.0",
    "pyhive>=0.7.0",
    "uvicorn>=0.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.4.2",
    "requests==2.32.3"
]
